# ChineseChess

./: .clang-format  .gitattributes  CMakeLists.txt  CMakePresets.json  README.md
include/: AiPlayer.h  AttackRange.h  ChessBoard.h  ChessPiece.h  CommandManager.h  ConcreteAttributes.h  CoreType.h  Game.h  GameContext.h  GameMode.h  GameModeFactory.h  HumanPlayer.h  InputHandler.h  NullAtkRange.h  NullAttributes.h  PieceAttributes.h  Player.h  PlayerInfo.h  SinglePosAtkRange.h  Soldier.h  StandardPveMode.h  TraditionalAttackRange.h
include/Action/: Action.h  TraditionalAction.h
include/AttackRange/: AttackRange.h  NullAtkRange.h  SinglePosAtkRange.h
include/ChessPiece/: Advisor.h  Cannon.h  Chariot.h  ChessPiece.h  Elephant.h  General.h  Horse.h  PieceFactory.h  Soldier.h  StandardChineseChessConfig.h
include/Command/: Command.h  CommandManager.h  SingleCommand.h
include/Common/: CoreType.h  InputHandler.h
include/Evaluator/: Evaluator.h  StandardEvaluator.h
include/GameMode/: GameMode.h  GameModeFactory.h  StandardPveMode.h
include/PieceAttributes/: ConcreteAttributes.h  NullAttributes.h  PieceAttributes.h
include/Player/: AiPlayer.h  HumanPlayer.h  Player.h  PlayerInfo.h
src/: AiPlayer.cpp  ChessBoard.cpp  ChessPiece.cpp  ConcreteAttributes.cpp  Game.cpp  GameContext.cpp  GameModeFactory.cpp  HumanPlayer.cpp  InputHandler.cpp  PieceAttributes.cpp  PieceFactory.cpp  Player.cpp  StandardPveMode.cpp  main.cpp
src/Action/: TraditionalAction.cpp
src/ChessPiece/: Advisor.cpp  Cannon.cpp  Chariot.cpp  ChessPiece.cpp  Elephant.cpp  General.cpp  Horse.cpp  Soldier.cpp
src/Command/: CommandManager.cpp  SingleCommand.cpp
src/Evaluator/: StandardEvaluator.cpp
src/GameMode/: StandardPveMode.cpp
src/Player/: AiPlayer.cpp  HumanPlayer.cpp  Player.cpp
test/: CMakeLists.txt  ChessBoardUtest.cpp  IsCheckedUtest.cpp  TestFramework.h  ValidMovesGenUtest.cpp
test/ChessPiece/: AdvisorUtest.cpp  CannonUtest.cpp  ChariotUtest.cpp  ChessPieceUtest.cpp  ElephantUtest.cpp  GeneralUtest.cpp  HorseUtest.cpp  SoldierUtest.cpp
